--- a/style.css
+++ b/style.css
@@ -1,18 +1,43 @@
 body{
+    padding: 0%;
     background-color: rgb(248, 247, 247);
 }
 
 .logo{
-    height: 5%;
-    right: 5%;
-}
-header{
-display: flex;
-logo{
-    right: 15%;
-}
-h1{
-    color: black;
+    height: 2%;
+    width:15%;
     
 }
+
+header{
+display: flex;
+background-color: floralwhite;
+}
+
+li{
+   display:inline-block;
+   text-decoration: none;
+   padding: 15px;
+   text-emphasis-style: 5%;
+}
+
+h1{
+    top: 5%;
+    right:20%;
+    color: black;
+    align-items: center;
+    padding-left: 30%;
+}
+.buscador{
+
+    padding-top: 2%;
+    padding-left: 8%;
+}
+
+.buscador {
+    background-color: darksalmon;
+    bottom: 5px;
+    text-overflow: ellipsis;
+    border-radius: 2px solid rgb(122, 109, 196);
+
 }
