--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 header{
 display: flex;
-background-color: floralwhite;
+margin-bottom: 2px solid black;
 }
 
 li{
@@ -19,6 +19,8 @@ li{
    text-decoration: none;
    padding: 15px;
    text-emphasis-style: 5%;
+   border-radius: 2px solid black;
+   
 }
 
 h1{
@@ -34,7 +36,8 @@ h1{
     padding-left: 8%;
 }
 
-.buscador {
+.mostrarbusqueda {
+    padding-top: 2pxs;
     background-color: darksalmon;
     bottom: 5px;
     text-overflow: ellipsis;
